third_party/move/move-compiler-v2/tests/checking/positional_fields/named_tuple_ability_decl_invalid2.exp

Diagnostics:
error: unexpected token
  ┌─ tests/checking/positional_fields/named_tuple_ability_decl_invalid2.move:2:19
  │
2 │     struct S has copy;
  │                      ^
  │                      │
  │                      Unexpected ';'
  │                      Expected '{'
